# astrology-mcp

./: .gitignore  LICENSE  README.md  example.py  mcp.json  my_natal_chart.py  pyproject.toml  requirements.txt
.qwen/: settings.json
src/astrology/: __init__.py
src/astrology/charts/: __init__.py  chart.py  chart_test.py
src/astrology/core/: __init__.py  aspects.py  aspects_test.py  calendar.py  ephemeris.py  ephemeris_test.py
src/astrology/progressions/: __init__.py  solar_arc.py
src/astrology/transits/: __init__.py  transit.py
src/astrology_mcp_server/: __init__.py  main.py
src/mcp/: astrology_server.py  server.py
tests/: __init__.py  test_mcp_server.py  test_planet_case_insensitive.py  test_planet_position.py  test_pluto_transit.py  test_solar_arc.py  test_transit_serialization.py  test_zonal_conversion.py
