[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astrology-mcp"
version = "0.1.0"
description = "Astrological calculation tool using Swiss Ephemeris for MCP servers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyswisseph>=2.10.0",
    "pydantic>=2.0",
    "mcp>=1.0.0",
]

[project.scripts]
astrology-mcp = "mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
